.k8s/devel/ingress-service.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    certmanager.k8s.io/cluster-issuer: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
spec:
  tls:
    - hosts:
        - chat.vexl.devel.cleevio.io
      secretName: vexl-chat-ms-api-tls
  rules:
    - host: chat.vexl.devel.cleevio.io
      http:
        paths:
          - path: /
            backend:
              serviceName: application-cluster-ip-service
              servicePort: 8080
